<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_color"
        android:icon="@drawable/ic_action_color"
        android:title="@string/color"
        app:showAsAction="ifRoom"/>


    <item android:id="@+id/action_line"
        android:icon="@drawable/ic_action_line"
        android:title="@string/line"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_erase"
        android:title="@string/erase"
        app:showAsAction="never"/>


    <item android:id="@+id/action_save"
        android:title="@string/save"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_print"
        android:title="@string/print"
        app:showAsAction="ifRoom"/>

</menu>